# ddd

./: .env  Makefile  pyproject.toml
app/application/api/: main.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: base.py  messages.py
app/domain/values/: base.py  messages.py
app/tests/domain/: test_messages.py
