[project]
name = "ddd"
version = "0.1.0"
description = "websocket + kafka"
authors = [
    {name = "y"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["httpx"], version = "^0.110.0"}
motor = "^3.3.2"
uvicorn = {extras = ["all"], version = "^0.28.0"}
ipython = "^8.22.2"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
faker = "^24.3.0"
punq = "^0.7.0"
httpx = "^0.27.0"
pydantic-settings = "^2.2.1"